# FSST-Sign-2022-23

./: LICENSE  README.md
2022_09_19_C_Wiederholung/: 01.c  README.md
2022_10_03_Managing/: README.md  leibnitzreihe.py  primfactor.py  pyproject.toml  test.py
2022_10_10_Stack_Heap/: README.md  find_address.c  find_address.py  pyproject.toml
2023_01_23_PyQT6_Login/: login.py  main.py  pyproject.toml
2023_01_30_PyQT6_ColorChooser/: main.py
2023_01_30_PyQT6_ColorChooser/chooser/: layouts.py
2023_03_27_Json_Rest_API/: Script.docx  aa1.py  aa2.py  aa3.py
2023_03_27_Json_Rest_API/weather/: main.py  weather.py
2023_03_27_Json_Rest_API/weather/utils/: __init__.py  api.py  tabs.py  tk.py
2023_1_23_PyQT6_Login/: README.md  login.py  pyproject.toml
2023_1_30_PyQT6_ColorChooser/: README.md
2023_1_30_PyQT6_ColorChooser/chooser/: __init__.py  layouts.py  menus.py  page.py  widgets.py
